<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout


    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_Name"/>

    <TextView

        android:layout_marginTop="16dp"
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"
        android:textColor="@android:color/black"
         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom"
        />
    <TextView

        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        style="@style/HeaderTextStyle"
        android:text="@string/whipped_cream"
        android:textColor="@android:color/black"
        />
</LinearLayout>

     <CheckBox
         android:id="@+id/chocCheckbox"

         style="@style/HeaderTextStyle"
         android:text="@string/chocolate"

         android:paddingLeft="24dp"/>
    <TextView

        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        style="@style/HeaderTextStyle"
        android:textColor="@android:color/black"
         />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:onClick="decrement"
            android:text="-" />


        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="0" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:onClick="increment"
            android:text="+" />


    </LinearLayout>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order" />


    </LinearLayout>
</ScrollView>
